--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-    background-image:url(./Images/freshly-cut-meat.jpg) ;
+    background-image:url(./Images/background.jpg) ;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed; 
@@ -74,6 +74,10 @@ background-color: #FBFCFF;
 font-size: 1.8rem;
 border-radius: 10px;
 padding: 5px;
+}
+
+#resultado:empty {
+    display: none;
 }
 
 @media screen and (max-width:1400px) {
